--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,25 @@
-.App {
+.fa-star {
+	margin: 0.5em;
+  font-size: 24px;
+}
+
+span {
+  display: inline-block;
+  margin: 0.5em;
   text-align: center;
+  background-color: #ccc;
+  border-radius: 50%;
+  width: 24px;
+  cursor: pointer;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.selected {
+  background-color: #eee;
+  color: #ddd;
+  cursor: not-allowed;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.used {
+	background-color: #aaddaa;
+  color: #99bb99;
+  cursor: not-allowed;
 }
